# git-gui-ng

./: .gitignore  .gitmodules  CMakeLists.txt  git-gui-config.h.in  git-gui.cpp  git-gui.h
lib/: about.cpp  about.h  blame.cpp  blame.h  branch.cpp  branch.h  branch_checkout.cpp  branch_checkout.h  branch_create.cpp  branch_create.h  branch_delete.cpp  branch_delete.h  branch_rename.cpp  branch_rename.h  browser.cpp  browser.h  checkout_op.cpp  checkout_op.h  choose_font.cpp  choose_font.h  choose_repository.cpp  choose_repository.h  choose_rev.cpp  choose_rev.h  class.cpp  class.h  commit.cpp  commit.h  console.cpp  console.h  database.cpp  database.h  date.cpp  date.h  diff.cpp  diff.h  encoding.cpp  encoding.h  error.cpp  error.h  (+42 more)
po/: .gitignore  CMakeLists.txt
